[update] create build && [update] configure memory router && [update] configure react-redux actions, store, initialState and reducers && [update] configure redux sagas

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:app": "node resources/scripts/build.js",
     "prebuild": "electron ./app/main",
     "start": "npm run build:app & npm run prebuild",
+    "start:dev": "node resources/scripts/start.js",
     "releases:win32": "node scripts/packagers/win-32",
     "releases:win64": "node scripts/packagers/win-64",
     "build:mac": "electron-packager . justlabelme --overwrite --platform=darwin --arch=x64 --icon=icons/icon.png --prune=true --out=release-builds",
@@ -29,6 +30,8 @@
   "author": "Jaroslav_Lesiv",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@material-ui/core": "^1.5.1",
+    "@material-ui/icons": "^2.0.3",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -71,9 +74,16 @@
     "react-create-provider": "^1.0.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.6.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
+    "styled-components": "^3.4.5",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
